# openchain-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  build.sh  go-ethereum.patch  go.mod  go.sum  repositories.bzl  run.sh  versions.txt
bazel/: release.bzl
cmd/signature-database-srv/: BUILD.bazel  main.go
cmd/solidity-compiler-srv/: .prettierignore  BUILD.bazel  Dockerfile  main.go  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
cmd/solidity-compiler-srv/src/: compiler-entrypoint.ts  main.ts  solc.d.ts  types.ts
cmd/vyper-compiler-srv/: BUILD.bazel  main.go
docs/: Dockerfile  swagger.yaml
frontend/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/components/: DarkModeContext.tsx  Navbar.tsx  ResponseAppBar.js  examples.tsx  helpers.tsx
frontend/components/signatures/: examples.tsx  helpers.tsx
frontend/components/tools/abi/: DecodeTab.tsx  EncodeTab.tsx
frontend/components/tracer/: Chains.ts  DataRenderer.tsx  Navbar.tsx  ParamFlatView.tsx  ParamTreeView.tsx  api.tsx  helpers.tsx  precompiles.tsx  types.tsx
frontend/components/tracer/decoder-format/: DecodeTree.tsx  ens.tsx  formatter.ts  swap.tsx  transfer.tsx  types.tsx  wrapped.tsx
frontend/components/tracer/gas-price-estimator/: estimate.ts
frontend/components/tracer/hooks/: useFragment.tsx
frontend/components/tracer/metadata/: tokens.ts  transaction.ts
frontend/components/tracer/trace/: CallTraceTreeItem.tsx  LogTraceTreeItem.tsx  TraceTree.tsx
frontend/components/tracer/transaction-info/: TransactionInfo.tsx
frontend/components/tracer/value-change/: ValueChange.tsx
frontend/pages/: _app.tsx  _document.js  index.tsx
frontend/pages/signatures/: import.tsx  index.tsx
frontend/pages/tools/abi/: index.tsx
frontend/pages/trace/: index.tsx
frontend/pages/trace/[chain]/: [txhash].tsx
frontend/styles/: globals.css
internal/compiler/: BUILD.bazel  compiler.go  solidity.go  storage.go  vyper.go
internal/config/: BUILD.bazel  config.go
internal/core/: BUILD.bazel  http.go
internal/database/: BUILD.bazel  database.go  sql.go  stmt.go  tx.go
internal/discord/: BUILD.bazel  discord.go
internal/ethclient/: BUILD.bazel  client.go  types.go
internal/solidity/: BUILD.bazel  abi.go  abi_test.go
services/signature-database-srv/: BUILD.bazel  http.go  import.go  service.go
services/signature-database-srv/client/: BUILD.bazel  client.go  types.go
services/signature-database-srv/database/: BUILD.bazel  database.go  init.go
services/signature-database-srv/database/migrations/: 00_init.down.sql  00_init.up.sql
services/solidity-compiler-srv/: BUILD.bazel  http.go
services/solidity-compiler-srv/client/: BUILD.bazel  client.go  types.go
services/vyper-compiler-srv/: BUILD.bazel  http.go  service.go
services/vyper-compiler-srv/client/: BUILD.bazel  types.go
