load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "signature-database-srv_lib",
    srcs = ["main.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/cmd/signature-database-srv",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//services/signature-database-srv",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "signature-database-srv",
    embed = [":signature-database-srv_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
