load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vyper-compiler-srv_lib",
    srcs = ["main.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/cmd/vyper-compiler-srv",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//services/vyper-compiler-srv",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "vyper-compiler-srv",
    embed = [":vyper-compiler-srv_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
