load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_spf13_viper//:viper",
    ],
)
