load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "sql.go",
        "stmt.go",
        "tx.go",
    ],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_jackc_pgx_v5//stdlib",
    ],
)
