load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "discord",
    srcs = ["discord.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/internal/discord",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
