load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "solidity",
    srcs = ["abi.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/internal/solidity",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//core/types",
    ],
)

go_test(
    name = "solidity_test",
    srcs = ["abi_test.go"],
    embed = [":solidity"],
    deps = [
        "//internal/ethclient",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//assert",
    ],
)
