load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "init.go",
    ],
    embedsrcs = [
        "migrations/00_init.down.sql",
        "migrations/00_init.up.sql",
    ],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/services/signature-database-srv/database",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/database",
        "//services/signature-database-srv/client",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_lib_pq//:pq",
    ],
)
